--- a/src/genweb6/serveistic/theme/scss/_homepage.scss
+++ b/src/genweb6/serveistic/theme/scss/_homepage.scss
@@ -95,6 +95,10 @@ body.template-facetednavigation_view {
 
         .card.shadow-sm {
             transition: ease-out .35s;
+
+            img {
+                height: 56px;
+            }
         }
 
         &:hover {
