Menu a nivel de serveistic

--- a/src/genweb6/serveistic/theme/scss/_content_serveitic.scss
+++ b/src/genweb6/serveistic/theme/scss/_content_serveitic.scss
@@ -1,5 +1,9 @@
 body.portaltype-serveitic {
 
+    div#social_tags {
+        margin-top: 0;
+    }
+
     &.template-manage-homeportlets {
 
         .menu_l2 {
