[UPD] Estilos menu serveistic

--- a/src/genweb6/serveistic/theme/scss/_hero.scss
+++ b/src/genweb6/serveistic/theme/scss/_hero.scss
@@ -46,6 +46,10 @@
 
         & > .nav-item {
 
+          & > a {
+            color: var(--bs-primary);
+          }
+
           &.current {
 
             & > a {
