--- a/src/genweb6/serveistic/theme/scss/_homepage.scss
+++ b/src/genweb6/serveistic/theme/scss/_homepage.scss
@@ -116,4 +116,10 @@ body.template-facetednavigation_view {
             }
         }
     }
+
+    /* RESULTADOS */
+
+    .eea-preview-items {
+        margin-bottom: 2rem;
+    }
 }
