[FIX] Abrir caja de filtros si esta marcado en el controlpanel + [UPD] Mejora estilos de la cafa de filtros para que tenga un height máximo

--- a/src/genweb6/serveistic/theme/scss/_homepage.scss
+++ b/src/genweb6/serveistic/theme/scss/_homepage.scss
@@ -93,6 +93,11 @@ body.template-facetednavigation_view {
                         }
                     }
                 }
+
+                .card-body {
+                    max-height: 400px;
+                    overflow-x: auto;
+                }
             }
         }
     }
